Update docker-compose and deploy script

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ jobs:
       IMAGE_NAME: docker.io/sumanth12345678/housing-api
 
     steps:
-    - name: 🛒 Checkout repo
+    - name: 🛒 Checkout code
       uses: actions/checkout@v3
 
     - name: 🐍 Set up Python
@@ -23,12 +23,16 @@ jobs:
     - name: 📦 Install dependencies
       run: |
         pip install -r requirements.txt
-        pip install flake8
+        pip install flake8 pytest
 
-    - name: 🔍 Lint Python code
+    - name: 🔍 Lint code
       run: flake8 api/ src/
 
-    - name: 🔐 Log in to Docker Hub
+    - name: 🧪 Run tests (optional)
+      run: |
+        pytest tests/ || echo "No tests available"
+
+    - name: 🔐 Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
@@ -37,6 +41,11 @@ jobs:
     - name: 🏗️ Build Docker image
       run: docker build -t $IMAGE_NAME .
 
-    - name: 🚀 Push Docker image to Docker Hub
+    - name: 🚀 Push image to Docker Hub
       run: docker push $IMAGE_NAME
+
+    - name: 🧪 Simulate local deployment with script
+      run: |
+        chmod +x deploy_local.sh
+        ./deploy_local.sh $IMAGE_NAME
 
